clusters/vps/services/trilium.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  namespace: trilium
spec:
  replicas: 1
  strategy:
    type: Recreate # Ensures only one pod accesses the folder at a time
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      containers:
      - name: trilium
        image: triliumnext/trilium:main
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: trilium-data
          mountPath: /home/node/trilium-data
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      - name: trilium-data
        hostPath:
          path: /opt/docker/trilium/trilium-data
          type: DirectoryOrCreate
      - name: timezone
        hostPath:
          path: /etc/timezone
      - name: localtime
        hostPath:
          path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: trilium-service
  namespace: trilium
spec:
  selector:
    app: trilium
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trilium-https
  namespace: trilium
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`trilium.nasson.co.za`)
    services:
    - name: trilium-service
      port: 80
  tls: {}
